# Keet

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml  windows-exe.yml
scripts/: bundle-macos.sh
src/: audio.rs  decode.rs  eq.rs  idle_ratatui.rs  lyrics.rs  main.rs  metadata.rs  mpv_ipc.rs  player_ratatui.rs  playlist.rs  resume.rs  state.rs  track.rs  ui.rs  video_mpv.rs  viz.rs
