[package]
name = "keet"
version = "0.1.0"
edition = "2021"

[features]
default = []
# 链接 Homebrew 的 libmpv（见 build.rs 方式 B）；需本机 `brew install mpv`。
libmpv = []

[dependencies]
# cpal - Cross-platform audio I/O library
cpal = "0.17"

# symphonia - Pure Rust audio decoding
# Note: `.m4a` is an MP4 (ISO-BMFF) container; `isomp4` is required in addition to `aac`/`alac`.
symphonia = { version = "0.5.5", features = ["mp3", "flac", "wav", "ogg", "aac", "alac", "aiff", "isomp4"] }

# rubato - High-quality audio resampling
rubato = "1.0"
audioadapter-buffers = "2.0"

# crossterm - Cross-platform terminal input/output
crossterm = "0.29"

# rtrb - Lock-free ring buffer for audio
rtrb = "0.3"

# realfft - FFT for real signals (audio spectrum analysis)
realfft = "3.4"

# JSON parsing for EQ presets
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OS media transport controls (media keys, AirPods, Bluetooth headphones)
souvlaki = "0.8"

# Lightweight HTTP client for lyrics fetching (LRCLIB)
ureq = { version = "3", default-features = false, features = ["native-tls", "gzip"] }
# Ratatui 0.29 绑定 crossterm 0.28；0.30 + crossterm_0_29 与下方 crossterm 0.29 统一依赖树。
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29", "underline-color", "all-widgets", "macros", "layout-cache", "std"] }

# macOS CoreAudio bindings for sample rate switching
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"

# Windows icon embedding
[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
